--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "vinyl-source-stream": "~1.1.0",
     "gulp": "~3.8.11",
     "babelify": "~6.0.2",
-    "browserify": "~9.0.8"
+    "browserify": "~9.0.8",
+    "gulp-stylus": "~2.0.1"
   }
 }
