--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
-    "vinyl-source-stream": "~1.1.0",
-    "gulp": "~3.8.11",
+    "axis": "^0.3.1",
     "babelify": "~6.0.2",
     "browserify": "~9.0.8",
-    "gulp-stylus": "~2.0.1"
+    "gulp": "~3.8.11",
+    "gulp-stylus": "~2.0.1",
+    "vinyl-source-stream": "~1.1.0"
   }
 }
